--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -9,7 +9,7 @@
                                 :css
                                     .cls-1{fill:#dc4912;stroke:#fff;stroke-miterlimit:10;}.cls-2{font-size:48px;fill:#231815;font-family:YuGo-Bold-83pv-RKSJ-H, YuGothic;}
                             %title アセット 3
-                            %g{"data-name" => "レイヤー 2", id: "レイヤー_2"}
+                            %g{data-name:"レイヤー 2", id: "レイヤー_2"}
                                 %g{"data-name" => "レイヤー 1", id: "レイヤー_1-2"}
                                 %polygon.cls-1{points: "36.41 83.5 0.5 62.77 0.5 21.31 36.41 0.58 72.32 21.31 72.32 62.77 36.41 83.5"}
                                 %polyline.cls-1{points: "0.5 21.31 36.41 42.04 72.32 21.31"}
@@ -57,19 +57,19 @@
                         .MainMenu__FavoriteItems__Body__Items__All
                             .MainMenu__FavoriteItems__Body__Items__All__List
                                 .MainMenu__FavoriteItems__Body__Items__All__List__image
-                                    %img.favorite-item-image{:alt => "", :src => "https://static.mercdn.net/item/detail/orig/photos/m68735417310_1.jpg?1571708042"}/
+                                    %img.favorite-item-image{alt:"", src: "https://static.mercdn.net/item/detail/orig/photos/m68735417310_1.jpg?1571708042"}/
                                     -# %span.body-item-pricetag{"aria-label" => "Price"} ¥12,000
                             .MainMenu__FavoriteItems__Body__Items__All__List
                                 .MainMenu__FavoriteItems__Body__Items__All__List__image
-                                    %img.favorite-item-image{:alt => "", :src => "https://static.mercdn.net/item/detail/orig/photos/m68735417310_1.jpg?1571708042"}/
+                                    %img.favorite-item-image{alt:"", src: "https://static.mercdn.net/item/detail/orig/photos/m68735417310_1.jpg?1571708042"}/
                                     -# %span.body-item-pricetag{"aria-label" => "Price"} ¥12,000
                             .MainMenu__FavoriteItems__Body__Items__All__List
                                 .MainMenu__FavoriteItems__Body__Items__All__List__image
-                                    %img.favorite-item-image{:alt => "", :src => "https://static.mercdn.net/item/detail/orig/photos/m68735417310_1.jpg?1571708042"}/
+                                    %img.favorite-item-image{alt:"", src: "https://static.mercdn.net/item/detail/orig/photos/m68735417310_1.jpg?1571708042"}/
                                     -# %span.body-item-pricetag{"aria-label" => "Price"} ¥12,000
                             .MainMenu__FavoriteItems__Body__Items__All__List
                                 .MainMenu__FavoriteItems__Body__Items__All__List__image
-                                    %img.favorite-item-image{:alt => "", :src => "https://static.mercdn.net/item/detail/orig/photos/m68735417310_1.jpg?1571708042"}/
+                                    %img.favorite-item-image{alt:"", src: "https://static.mercdn.net/item/detail/orig/photos/m68735417310_1.jpg?1571708042"}/
                                     -# %span.body-item-pricetag{"aria-label" => "Price"} ¥12,000
 
 
@@ -95,11 +95,11 @@
                     .MainMenu__CategoryItems__Body__Items
                         .MainMenu__CategoryItems__Body__Items__All
                             .MainMenu__CategoryItems__Body__Items__All__List
-                                %div{:style => "visibility: visible; transition: all 0.5s ease 0s; opacity: 1;"}
+                                %div{ style: "visibility: visible; transition: all 0.5s ease 0s; opacity: 1;"}
                                     %figure.body-item
                                         .MainMenu__CategoryItems__Body__Items__All__List__image
                                             -# %span.body-item-pricetag{"aria-label" => "Price"} ¥12,000
-                                            %img.body-item-image{:alt => "", :src => "https://static.mercdn.net/item/detail/orig/photos/m51605700246_1.jpg?1573572058"}/
+                                            %img.body-item-image{alt: "", src: "https://static.mercdn.net/item/detail/orig/photos/m51605700246_1.jpg?1573572058"}/
                                         %figcaption
                                             %span セール13000円→12000円　めんたいマヨネーズ
 
@@ -108,7 +108,7 @@
                                     %figure.body-item
                                         .MainMenu__CategoryItems__Body__Items__All__List__image
                                             -# %span.body-item-pricetag{"aria-label" => "Price"} ¥12,000
-                                            %img.body-item-image{:alt => "", :src => "https://static.mercdn.net/item/detail/orig/photos/m51605700246_1.jpg?1573572058"}/
+                                            %img.body-item-image{alt: "", src: "https://static.mercdn.net/item/detail/orig/photos/m51605700246_1.jpg?1573572058"}/
                                         %figcaption
                                             %span セール13000円→12000円　めんたいマヨネーズ
 
@@ -117,7 +117,7 @@
                                     %figure.body-item
                                         .MainMenu__CategoryItems__Body__Items__All__List__image
                                             -# %span.body-item-pricetag{"aria-label" => "Price"} ¥12,000
-                                            %img.body-item-image{:alt => "", :src => "https://static.mercdn.net/item/detail/orig/photos/m51605700246_1.jpg?1573572058"}/
+                                            %img.body-item-image{alt: "", src: "https://static.mercdn.net/item/detail/orig/photos/m51605700246_1.jpg?1573572058"}/
                                         %figcaption
                                             %span セール13000円→12000円　めんたいマヨネーズ
 
@@ -145,11 +145,11 @@
                     .MainMenu__BrandItems__Body__Items
                         .MainMenu__BrandItems__Body__Items__All
                             .MainMenu__BrandItems__Body__Items__All__List
-                                %div{:style => "visibility: visible; transition: all 0.5s ease 0s; opacity: 1;"}
+                                %div{style: "visibility: visible; transition: all 0.5s ease 0s; opacity: 1;"}
                                     %figure.body-item
                                         .MainMenu__BrandItems__Body__Items__All__List__image
                                             -# %span.body-item-pricetag{"aria-label" => "Price"} ¥12,000
-                                            %img.body-item-image{:alt => "Thumbnail of \"セール13000円→12000円　Douxmiere キュービックネックレス\"", :src => "https://static.mercdn.net/thumb/photos/m68548725798_1.jpg?1562335238"}/
+                                            %img.body-item-image{alt: "Thumbnail of \"セール13000円→12000円　Douxmiere キュービックネックレス\"", src: "https://static.mercdn.net/thumb/photos/m68548725798_1.jpg?1562335238"}/
                                         %figcaption
                                             %span セール13000円→12000円　めんたいマヨネーズ
 
@@ -158,7 +158,7 @@
                                     %figure.body-item
                                         .MainMenu__BrandItems__Body__Items__All__List__image
                                             -# %span.body-item-pricetag{"aria-label" => "Price"} ¥12,000
-                                            %img.body-item-image{:alt => "Thumbnail of \"セール13000円→12000円　Douxmiere キュービックネックレス\"", :src => "https://static.mercdn.net/thumb/photos/m68548725798_1.jpg?1562335238"}/
+                                            %img.body-item-image{alt: "Thumbnail of \"セール13000円→12000円　Douxmiere キュービックネックレス\"", src: "https://static.mercdn.net/thumb/photos/m68548725798_1.jpg?1562335238"}/
                                         %figcaption
                                             %span セール13000円→12000円　めんたいマヨネーズ
 
@@ -167,7 +167,7 @@
                                     %figure.body-item
                                         .MainMenu__BrandItems__Body__Items__All__List__image
                                             -# %span.body-item-pricetag{"aria-label" => "Price"} ¥12,000
-                                            %img.body-item-image{:alt => "Thumbnail of \"セール13000円→12000円　Douxmiere キュービックネックレス\"", :src => "https://static.mercdn.net/thumb/photos/m68548725798_1.jpg?1562335238"}/
+                                            %img.body-item-image{alt: "Thumbnail of \"セール13000円→12000円　Douxmiere キュービックネックレス\"", src: "https://static.mercdn.net/thumb/photos/m68548725798_1.jpg?1562335238"}/
                                         %figcaption
                                             %span セール13000円→12000円　めんたいマヨネーズ
 
@@ -179,11 +179,11 @@
             .Aside__Text__Lists
                 %p.aside-text1 Fmarket  わくわくフリマアプリ
                 %p.aside-text2 今すぐ出品してみよう！
-            %img.aside-app{:alt => "", :src => "https://web-jp-assets.mercdn.net/_next/static/images/app-store-a5c17948c6fd6d5b60b13d421cd60b35.svg"}/
-            %img.aside-app{:alt => "", :src => "https://web-jp-assets.mercdn.net/_next/static/images/google-play-495575abb895b405aa6336b2a4304958.svg"}/
+            %img.aside-app{alt: "", src:"https://web-jp-assets.mercdn.net/_next/static/images/app-store-a5c17948c6fd6d5b60b13d421cd60b35.svg"}/
+            %img.aside-app{alt: "", src: "https://web-jp-assets.mercdn.net/_next/static/images/google-play-495575abb895b405aa6336b2a4304958.svg"}/
 
         .Aside__Image
-            %img.aside-image1{:alt => "", :src => "https://web-jp-assets.mercdn.net/_next/static/images/download_app_pc-a4418175e8be071827ac88d073f40e4a.png"}/
+            %img.aside-image1{alt: "", src: "https://web-jp-assets.mercdn.net/_next/static/images/download_app_pc-a4418175e8be071827ac88d073f40e4a.png"}/
 
     %footer
         %nav
@@ -211,19 +211,19 @@
                             XXXXXX
 
             .FooterBottom
-                %svg.footer-logo{:viewbox => "0 0 281.19 84.08", :xmlns => "http://www.w3.org/2000/svg"}
+                %svg.footer-logo{viewbox: "0 0 281.19 84.08", xmlns: "http://www.w3.org/2000/svg"}
                     %defs
                         :css
                             .cls-1{fill:#fff;stroke:#b53d22;stroke-miterlimit:10;}.cls-2{font-size:48px;fill:#231815;font-family:YuGo-Bold-83pv-RKSJ-H, YuGothic;}
                     %title アセット 1
-                    %g{"data-name" => "レイヤー 2", :id => "レイヤー_2"}
-                        %g{"data-name" => "レイヤー 1", :id => "レイヤー_1-2"}
-                        %polygon.cls-1{:points => "36.41 83.5 0.5 62.77 0.5 21.31 36.41 0.58 72.32 21.31 72.32 62.77 36.41 83.5"}
-                        %polyline.cls-1{:points => "0.5 21.31 36.41 42.04 72.32 21.31"}
-                        %polyline.cls-1{:points => "36.41 83.5 36.41 49.36 36.41 42.04"}
-                        %line.cls-1{:x1 => "36.41", :x2 => "0.5", :y1 => "52.41", :y2 => "31.67"}
-                        %line.cls-1{:x1 => "72.32", :x2 => "36.41", :y1 => "33.2", :y2 => "50.88"}
-                        %text.cls-2{:transform => "translate(86.41 62.77)"} Fmarket
+                    %g{data-name:"レイヤー 2", id: "レイヤー_2"}
+                        %g{data-name: "レイヤー 1", id: "レイヤー_1-2"}
+                        %polygon.cls-1{points: "36.41 83.5 0.5 62.77 0.5 21.31 36.41 0.58 72.32 21.31 72.32 62.77 36.41 83.5"}
+                        %polyline.cls-1{points: "0.5 21.31 36.41 42.04 72.32 21.31"}
+                        %polyline.cls-1{points: "36.41 83.5 36.41 49.36 36.41 42.04"}
+                        %line.cls-1{x1: "36.41", x2: "0.5", y1: "52.41", y2: "31.67"}
+                        %line.cls-1{x1: "72.32", x2: "36.41", y1: "33.2", y2: "50.88"}
+                        %text.cls-2{transform: "translate(86.41 62.77)"} Fmarket
 
 
                     %span.footer-text 
