--- a/app/views/signups/step1.html.haml
+++ b/app/views/signups/step1.html.haml
@@ -8,23 +8,23 @@
   %section.l-single-container
     %h2.l-single-inner_registration
       会員情報入力
-    = form_for @user, url: step2_signups_path, method: :get do |f|
+    = form_for @user, url: step1_signups_path, method: :get do |f|
       - required = '必須'
       .user_information
         .field
           .field-label
-            = f.label :"ニックネーム", class: 'left-label'
+            = f.label :"ニックネーム", class: 'label_nickname'
             %span.min #{required}
           .field-input
             = f.text_field :nickname, autofocus: true, class: 'user_nickname', id: 'nickname', placeholder: '例）フリマ123'
         .field
           .field-label
-            = f.label :"メールアドレス"
+            = f.label :"メールアドレス", class: 'label_mail'
             %span.min #{required}
           .field-input
             = f.email_field :email, class: 'user_email', id: 'email', placeholder: 'PC・携帯どちらでも可'
         .field
-          = f.label :"パスワード"
+          = f.label :"パスワード", class: 'label_password'
           %span.min #{required}
           = f.password_field :password, class: 'user_password', id: 'password', placeholder: '７文字以上'
         .field_checkbox
@@ -37,28 +37,31 @@
             安心・安全にご利用いただくために、お客さまの本人情報の登録にご協力ください。他のお客さまに公開されることはありません。
         .field
           .field-label
-            = f.label :"お名前(全角)"
+            = f.label :"お名前(全角)", class: 'label_name'
             %span.min #{required}
           .field-input
             = f.text_field :lastname, placeholder: '例）佐藤', id: 'user_lastname'
             = f.text_field :firstname, placeholder: '例）太郎', id: 'user_firstname'
         .field
           .field-label
-            = f.label :"お名前カナ(全角)"
+            = f.label :"お名前カナ(全角)", class: 'label_namekana'
             %span.min #{required}
           .field-input
             = f.text_field :lastname_kana, placeholder: '例）サトウ', id: 'user_lastname_kana'
             = f.text_field :firstname_kana, placeholder: '例）タロウ', id: 'user_firstname_kana'
         .field
           .field-label
-            = f.label :"生年月日"
+            = f.label :"生年月日", class: 'label_birthday'
             %span.min #{required}
           .field-input
             = f.select :birthday_year, [*1900..2019],:prompt=>"--", id: 'user_birthday_year'
+            %i{class:'fas fa-angle-down'}
             %span 年
             = f.select :birthday_month, [*1..12],:prompt=>"--", id: 'user_birthday_month'
+            %i{class:'fas fa-angle-down'}
             %span 月
             = f.select :birthday_day, [*1..31],:prompt=>"--", id: 'user_birthday_day'
+            %i{class:'fas fa-angle-down'}
             %span 日
         .registration_message
           %p.regime
@@ -68,5 +71,6 @@
         .field
           .firld-input
             = f.submit :"次へ進む", class: "next_submit"
+        .destory_wall
 %footer.single_footer
   %h1 フッター
