--- a/app/views/addresses/new.html.haml
+++ b/app/views/addresses/new.html.haml
@@ -12,51 +12,52 @@
       - required = '必須'
       - optional = '任意'
       .user_address
-        .field
+        .field-address
           .field-label
             = f.label :"お名前", class: 'user_address_name'
             %span.min #{required}
           .field-input
             = f.text_field :lastname, placeholder: '例）佐藤', id: 'user_lastname address_user_lastname', class: 'address_user_lastname'
             = f.text_field :firstname, placeholder: '例）太郎', id: 'user_firstname', class: 'address_user_firstname'
-        .field
+        .field-address
           .field-label
             = f.label :"お名前カナ", class: 'user_address_name_kana'
             %span.min #{required}
           .field-input
             = f.text_field :lastname_kana, placeholder: '例）サトウ', id: 'user_lastname_kana', class: 'address_user_lastname_kana'
             = f.text_field :firstname_kana, placeholder: '例）タロウ', id: 'user_firstname_kana', class: 'address_user_firstname_kana'
-        .field
+        .field-address
           .field-label
             = f.label :"郵便番号", class: 'address_postcode'
             %span.min #{required}
           .field-input
             = f.text_field :postcode, placeholder: '例）123-4567', id: 'address_postcode'
-        .field
+        .field-address
           .field-label
             = f.label :"都道府県", class: 'address_prefectures'
             %span.min #{required}
-          .field-input
+          .field-pulldown
             = f.select :prefectures, ["北海道","青森県","岩手県","宮城県","秋田県","山形県","福島県","茨城県","栃木県","群馬県","埼玉県","千葉県","東京都","神奈川県","新潟県","富山県","石川県","福井県","山梨県","長野県","岐阜県","静岡県","愛知県","三重県","滋賀県","京都府","大阪府","兵庫県","奈良県","和歌山県","鳥取県","島根県","岡山県","広島県","山口県","徳島県","香川県","愛媛県","高知県","福岡県","佐賀県","長崎県","熊本県","大分県","宮崎県","鹿児島県","沖縄県"], id: 'address_prefectures'
-        .field
+            %i{class:'fas fa-angle-down address_icon'}
+        .field-address
           .field-label
             = f.label :"市区町村", class: 'address_city'
             %span.min #{required}
           .field-input
             = f.text_field :city, placeholder: '例）横浜市緑区', id: 'address_city'
-        .field
+        .field-address
           .field-label
             = f.label :"番地", class: 'address_street_num'
             %span.min #{required}
           .field-input
             = f.text_field :street_num, placeholder: '例）青山1-1-1', id: 'address_street_num'
-        .field
+        .field-address
           .field-label
             = f.label :"建物名", class: 'address_building'
             %span.nin #{optional}
           .field-input
             = f.text_field :building, placeholder: '例）エスポワール号45', id: 'address_building'
-        .field
+        .field-address
           .field-label
             = f.label :"電話", class: 'address_home_call_num'
             %span.nin #{optional}
