--- a/app/views/homes/index.html.haml
+++ b/app/views/homes/index.html.haml
@@ -1,46 +1,7 @@
 %body
     %header
-        .Header
-            .HeaderTop
-                .HeaderTop__Menu
-                    .HeaderTop__Menu__header-logo
-                        %svg.header-logo{viewbox: "0 0 281.19 84.08", xmlns: "http://www.w3.org/2000/svg"}
-                            %defs
-                                :css
-                                    .cls-1{fill:#dc4912;stroke:#fff;stroke-miterlimit:10;}.cls-2{font-size:48px;fill:#231815;font-family:YuGo-Bold-83pv-RKSJ-H, YuGothic;}
-                            %title アセット 3
-                            %g{"data-name": "レイヤー 2", id: "レイヤー_2"}
-                                %g{"data-name": "レイヤー 1", id: "レイヤー_1-2"}
-                                %polygon.cls-1{points: "36.41 83.5 0.5 62.77 0.5 21.31 36.41 0.58 72.32 21.31 72.32 62.77 36.41 83.5"}
-                                %polyline.cls-1{points: "0.5 21.31 36.41 42.04 72.32 21.31"}
-                                %polyline.cls-1{points: "36.41 83.5 36.41 49.36 36.41 42.04"}
-                                %line.cls-1{x1: "36.41", x2: "0.5", y1: "52.41", y2: "31.67"}
-                                %line.cls-1{x1: "72.32", x2: "36.41", y1: "33.2", y2: "50.88"}
-                                %text.cls-2{transform: "translate(86.41 62.77)"} Fmarket
-                    .HeaderTop__Menu__header-search
-                        %form.search{action: "/jp/search/"}
-                        %input.search{name: "keyword", placeholder: "何かお探しですか？", type: "search", value: ""}/
-                        %button.search-logo
-                            %i.fas.fa-search
+        = render 'header'
 
-            .HeaderBottom
-                .HeaderBottom__Left
-                    .HeaderBottom__Left__genre_search
-                        %i.far.fa-list-alt
-                        カテゴリーから探す
-                    .HeaderBottom__Left__genre_search
-                        %i.fas.fa-tag
-                        ブランドから探す
-                .HeaderBottom__Right
-                    .HeaderBottom__Right__Menu
-                        %i.far.fa-heart
-                        いいね！一覧
-                    .HeaderBottom__Right__Menu
-                        %i.far.fa-bell
-                        お知らせ
-                    .HeaderBottom__Right__Menu
-                        %i.far.fa-image
-                        マイページ
 
     .Slide-menu
         .Slide-menu__1
@@ -186,48 +147,8 @@
             %img.aside-image1{alt: "", src: "https://web-jp-assets.mercdn.net/_next/static/images/download_app_pc-a4418175e8be071827ac88d073f40e4a.png"}/
 
     %footer
-        %nav
-            .FooterMenu
-                .FooterMenu__list
-                    %h2.FooterMenu__list__title Fmarketについて
-                    %ul.FooterMenu__list_wrapper
-                        %li.FooterMenu__list__small サービス詳細
-                        %li.FooterMenu__list__small XXXXXX
-                
-                .FooterMenu__list
-                    %h2.FooterMenu__list__title ヘルプ＆ガイド
-                    %ul
-                        %li.FooterMenu__list__small 
-                            Fmarketガイド
-                        %li.FooterMenu__list__small
-                            XXXXXX
+        = render 'footer'
 
-                .FooterMenu__list
-                    %h2.FooterMenu__list__title プライバシーと利用規約
-                    %ul
-                        %li.FooterMenu__list__small 
-                            プライバシーポリシー
-                        %li.FooterMenu__list__small
-                            XXXXXX
-
-            .FooterBottom
-                %svg.footer-logo{viewbox: "0 0 281.19 84.08", xmlns: "http://www.w3.org/2000/svg"}
-                    %defs
-                        :css
-                            .cls-1{fill:#fff;stroke:#b53d22;stroke-miterlimit:10;}.cls-2{font-size:48px;fill:#231815;font-family:YuGo-Bold-83pv-RKSJ-H, YuGothic;}
-                    %title アセット 1
-                    %g{"data-name": "レイヤー 2", id: "レイヤー_2"}
-                        %g{"data-name": "レイヤー 1", id: "レイヤー_1-2"}
-                        %polygon.cls-1{points: "36.41 83.5 0.5 62.77 0.5 21.31 36.41 0.58 72.32 21.31 72.32 62.77 36.41 83.5"}
-                        %polyline.cls-1{points: "0.5 21.31 36.41 42.04 72.32 21.31"}
-                        %polyline.cls-1{points: "36.41 83.5 36.41 49.36 36.41 42.04"}
-                        %line.cls-1{x1: "36.41", x2: "0.5", y1: "52.41", y2: "31.67"}
-                        %line.cls-1{x1: "72.32", x2: "36.41", y1: "33.2", y2: "50.88"}
-                        %text.cls-2{transform: "translate(86.41 62.77)"} Fmarket
-
-
-                    %span.footer-text 
-                        © 2019 Fmarket
 
     .PostItems
         .PostItems__Button 
