--- a/app/views/mypages/logout.html.haml
+++ b/app/views/mypages/logout.html.haml
@@ -7,5 +7,6 @@
   .logout
     .logout__form
       = button_to "ログアウト", destroy_user_session_path, {method: :delete, class: "logout__form--button"}
-  = render 'sidebar'
+  -# = render 'sidebar' サイドバーをレンダーする
+/ フッターをレンダーする
 .footer
