--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,4 +2,5 @@
 @import 'font-awesome';
 @import 'signups/step1.scss';
 @import 'addresses/new.scss';
-@import 'creditcards/new.scss'
+@import 'creditcards/new.scss';
+@import 'signups/done.scss';
