Revert "マイページ画面実装"

--- a/app/views/mypages/index.html.haml
+++ b/app/views/mypages/index.html.haml
@@ -1,46 +1,2 @@
-%body
-  = render '/homes/header'
-  .main
-    .mypage-container
-      .mypage-header
-        .mypage-header__image
-        .mypage-header__name
-          ユーザー名前
-        .mypage-header__evaluation
-          評価
-        .mypage-header__evaluation-num
-          0
-        .mypage-header__exhibit
-          出品数
-        .mypage-header__exhibit-num
-          0
-      -# %ul.list 余裕があればやるところです
-      -#   %li.list__left
-      -#     お知らせ
-      -#   %li.list__right
-      -#     やることリスト
-      -# .report-area
-      -#   お知らせとやることリスト
-
-      .tabs
-      .purchased-product
-        購入した商品
-      %ul.list-line
-        %li.active-line
-        %li.past-line
-      %ul.list
-        %li.active
-          取引中
-          -# = link_to '取引中', '', class:""
-        %li.past
-          過去の取引
-          -# = link_to '過去の取引', '', class:""
-      %ul.report-areas
-        %li.report-area-info
-          取引中の商品はありません
-        %li.report-area-todo
-          過去の取引リスト
-    
-    = render "sidebar"
-  
-  = render "/homes/footer"
+%h1 Mypages#index
+%p Find me in app/views/mypages/index.html.haml
