--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,3 +22,20 @@
 @import "signups/step2.scss";
 @import "addresses/new.scss";
 @import "shard/signups_errors";
+@import 'signups/step1.scss';
+@import 'signups/step2.scss';
+@import 'addresses/new.scss';
+@import 'creditcards/new.scss';
+@import 'signups/done.scss';
+@import 'signups/header.scss';
+
+@import 'font-awesome-sprockets';
+@import 'font-awesome';
+@import 'signups/step1.scss';
+@import 'signups/index.scss';
+
+@import 'addresses/new.scss';
+@import 'creditcards/new.scss';
+
+@import 'devise/sessions/new';
+
