--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,10 @@
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
 @import 'signups/step1.scss';
+@import 'signups/index.scss';
+
 @import 'addresses/new.scss';
-@import 'creditcards/new.scss'
+@import 'creditcards/new.scss';
+
+@import 'devise/sessions/new';
+
