出品ボタン（postitem）render化

--- a/app/views/homes/index.html.haml
+++ b/app/views/homes/index.html.haml
@@ -149,10 +149,6 @@
     = render 'footer'
 
 
-    .PostItems
-        .PostItems__Button 
-            出品
-            .PostItems__Icon 
-                %i.fas.fa-camera.fa-3x
+    = render 'postitem'
 
 
