--- a/app/views/homes/_footer.html.haml
+++ b/app/views/homes/_footer.html.haml
@@ -1,5 +1,5 @@
-%footer.toppage
-    %nav.toppage
+%footer.footer-toppage
+    %nav.nav-toppage
         .FooterMenu
             .FooterMenu__list
                 %h2.FooterMenu__list__title Fmarketについて
