--- a/app/views/homes/index.html.haml
+++ b/app/views/homes/index.html.haml
@@ -1,4 +1,4 @@
-%body.toppage
+%body.body-toppage
 
     = render 'header'
 
@@ -7,7 +7,7 @@
         .Slide-menu__1
         .Slide-menu__2
 
-    %main.toppage
+    %main.main-toppage
         .MainMenu
             .MainMenu__FavoriteItems
                 .MainMenu__FavoriteItems__Header
@@ -135,7 +135,7 @@
 
 
 
-    %aside.toppage
+    %aside.aside-toppage
         .Aside__Text
             .Aside__Text__Lists
                 %p.aside-text1 Fmarket  わくわくフリマアプリ
