--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,9 +31,8 @@
 @import 'devise/sessions/new';
 @import 'devise/sessions/new';
 @import 'signups/footer.scss';
-
-@import 'font-awesome-sprockets';
-@import 'font-awesome';
 @import 'signups/step1.scss';
 @import 'addresses/new.scss';
-@import 'creditcards/new.scss'
+@import 'creditcards/new.scss';
+@import "mypages/identification";
+@import "signups/signup.scss"
