--- a/app/assets/stylesheets/homes/home.scss
+++ b/app/assets/stylesheets/homes/home.scss
@@ -75,7 +75,7 @@ button.search-logo{
   width: 40px;
   border-color: none;
   background-color: #f5f5f5;
-  
+
 }
 
 img.footer-logo{
@@ -601,7 +601,6 @@ span.footer-text{
 
 
 .PostItems{
-
     width: 200px;
     height: 200px;
     padding: 20px;
@@ -611,6 +610,7 @@ span.footer-text{
     display: inline-block;
     display: flex;
     justify-content: center;
+    z-index: 100;
 
 
   &__Button{
