--- a/app/views/mypages/_sidebar.html.haml
+++ b/app/views/mypages/_sidebar.html.haml
@@ -1,22 +1,18 @@
-- menulist = ["マイページ","お知らせ","やることリスト","いいね！一覧","出品する","出品した商品 - 出品中","出品した商品 - 取引中","出品した商品 - 売却済み","購入した商品 - 取引中","購入した商品 - 過去の取引","ニュース一覧","評価一覧","ガイド","お問い合わせ"]
-- linklist = ["/example/","/info/","/mustdo/","/shuppin/","/mypage/"]
-- configlist =["プロフィール","発送元・お届け先住所変更","支払い方法","メール/パスワード","本人情報","電話番号の確認","ログアウト"]
-- configlinklist = ["/example/","/info/","/mustdo/","/shuppin/","/mypage/","/mypage/","/users/signout/"]
-
 .sidebar
   .sidebar__list
     %ul.menu
-      = menulist.zip(linklist) do |menu,link|
+      = @menulist.zip(@linklist) do |menu,link|
         %li.menu__item
-          %a.menu__item--link{href:"#{link}"} 
-            #{menu}
-            .menu__item--arrow 
+          = link_to link, class:'menu__item--link' do
+            = menu
+            .menu__item--arrow
               %i.fas.fa-chevron-right
     .navi-head 設定
     %ul.config
-      = configlist.zip(configlinklist) do |config,link|
+      = @configlist.zip(@configlinklist) do |config, link|
         %li.config__item
-          %a.config__item--link{href:"#{link}"} 
-            #{config}
-            .config__item--arrow 
-              %i.fas.fa-chevron-right
+          %li.config__item
+            = link_to link, class:'config__item--link' do
+              = config
+              .config__item--arrow
+                %i.fas.fa-chevron-right
