--- a/app/assets/stylesheets/signups/index.scss
+++ b/app/assets/stylesheets/signups/index.scss
@@ -8,8 +8,8 @@
   width: 100%;
   display: flex;
   justify-content: center;
-
-
+  box-shadow: none;
+  background-color: rgb(245, 245, 245);
 }
 
 
@@ -36,7 +36,7 @@
   .login2-panel{
     width: 700px;
     background-color: #fff;
-    margin: 0 305px;
+    margin: 0 360px;
 
 
 
@@ -91,62 +91,8 @@ p.login2-panel-title{
   font-size: 22px;
   padding: 30px;
   text-align: center;
-
+  border-bottom: 2px rgb(245, 245, 245) solid;
 }
 
 
 // Footer
-
-footer.single-footer{
-  height: 220px;
-  width: 33%;
-  position: relative;
-  margin-left: 455px;
-  padding-top: 40px;
-
-  .footer-top{
-    height: 20px;
-    width: 100%;
-    position: absolute;
-
-  }
-
-  .footer-logo{
-    height: 65px;
-    width: 100%;
-
-
-  }
-
-  .footer-bottom{
-    height: 15px;
-    width: 100%;
-  }
-}
-
-
-li.footer-top__list__text{
-  float: left;
-  font-size: 12px;
-  list-style: none;
-  margin-left: 25px;
-
-}
-
-p.footer-bottom-text{
-  margin-top: 10px;
-  font-size: 10px;
-  text-align: center;
-}
-
-
-.footer-logo{
-  height: 65px;
-  width: 80px;
-  display: block;
-  margin: 50px 190px 0 190px;
-  background-image: url("logo_gray");
-  background-repeat: no-repeat;
-}
-
-
