--- a/app/views/addresses/new.html.haml
+++ b/app/views/addresses/new.html.haml
@@ -110,4 +110,6 @@
           .firld-input
             = f.submit :"次へ進む", class: "next_submit", class: 'address_submit'
         .destory_wall
-.footer フッター
+.single-footer
+            = render 'signups/footer'
+    
