--- a/app/views/creditcards/new.html.haml
+++ b/app/views/creditcards/new.html.haml
@@ -55,3 +55,5 @@
           %button.btn-default.btn-red 次へ進む
           -# = f.submit :"次へ進む", class: "next_submit"
       .destory_wall
+.single-footer
+            = render 'signups/footer'
