--- a/app/views/signups/step1.html.haml
+++ b/app/views/signups/step1.html.haml
@@ -123,5 +123,6 @@
         .field
           .firld-input
             = f.submit :"次へ進む", class: "next_submit"
-%footer.single_footer
-  %h1 フッター
+        .destory_wall
+.single-footer
+  = render 'signups/footer'
