--- a/app/views/signups/done.html.haml
+++ b/app/views/signups/done.html.haml
@@ -44,5 +44,5 @@
         =image_tag 'Download_on_the_App_Store_Badge_US-UK_RGB_blk_092917.svg', class: "apple-done"
         =image_tag 'google-play-badge.png', width: '153', class: "gogle-done"
         =image_tag 'logo_red.svg', width: '36', class: "logo-done"
-
-    
+.single-footer
+            = render 'signups/footer'
