--- a/app/views/signups/index.html.haml
+++ b/app/views/signups/index.html.haml
@@ -4,7 +4,7 @@
         %header.single-header
             .header-logo
 
-        %main.single-main
+        .single-main
             .login2-panel
 
                 %p.login2-panel-title 新規会員登録
@@ -21,8 +21,5 @@
                     %button.login2-panel__login-form-inner--google
                         %i.fab.fa-google
                         Googleでログイン
-
-
-        %footer.single-footer
-            = render 'footer'
-
+        .single-footer
+            = render 'signups/footer'
