--- a/app/views/signups/step2.html.haml
+++ b/app/views/signups/step2.html.haml
@@ -26,5 +26,5 @@
         .next_btn
           = f.submit :"次へ進む", class: "next_submit"
         %p.number_explanation ※電話番号は本人確認や不正利用防止のために利用します。他のユーザーに公開されることはありません。
-%footer
-  フッター
+.single-footer
+            = render 'signups/footer'
