--- a/app/views/signups/done.html.haml
+++ b/app/views/signups/done.html.haml
@@ -23,7 +23,7 @@
         完了
         %br
         %span.point5-5
-%main.single-main
+.single-main
   %section.l-single-container
     %h2.l-single-inner_registration
       会員登録完了
@@ -45,4 +45,4 @@
         =image_tag 'google-play-badge.png', width: '153', class: "gogle-done"
         =image_tag 'logo_red.svg', width: '36', class: "logo-done"
 .single-footer
-            = render 'signups/footer'
+  = render 'signups/footer'
