--- a/app/views/signups/step1.html.haml
+++ b/app/views/signups/step1.html.haml
@@ -90,20 +90,26 @@
           - if @user.errors.messages[:birthday_year].any?
             .field-input
               = f.select :birthday_year, [*1900..2019].reverse!, prompt: "--", id: 'user_birthday_year'
+              .i{class: "fas fa-angle-down"}
               %span 年
               = f.select :birthday_month, [*1..12], prompt: "--", id: 'user_birthday_month'
+              .i{class: "fas fa-angle-down"}
               %span 月
               = f.select :birthday_day, [*1..31], prompt: "--", id: 'user_birthday_day'
+              .i{class: "fas fa-angle-down"}
               %span 日
               %p.signups_errors__error
                 = @user.errors.messages[:birthday_day].join
           - else
             .field-input
               = f.select :birthday_year, [*1900..2019].reverse, prompt: "--", id: 'user_birthday_year'
+              .i{class: "fas fa-angle-down"}
               %span 年
               = f.select :birthday_month, [*1..12], prompt: "--", id: 'user_birthday_month'
+              .i{class: "fas fa-angle-down"}
               %span 月
               = f.select :birthday_day, [*1..31], prompt: "--", id: 'user_birthday_day'
+              .i{class: "fas fa-angle-down"}
               %span 日
         .registration_message
           %p.regime
