--- a/app/assets/stylesheets/signups/step2.scss
+++ b/app/assets/stylesheets/signups/step2.scss
@@ -62,9 +62,16 @@ h2 {
   background-color: rgb(234, 53, 45);
   color: #fff;
   width: 325px;
+  margin-top: 20px;
   margin-bottom: 10px;
 }
 
 .number_explanation {
   font-size: 13px;
+  margin-bottom: 50px;
+}
+
+.destroy-wall {
+  height: 1px;
+  width: 100%;
 }
