--- a/app/views/signups/step2.html.haml
+++ b/app/views/signups/step2.html.haml
@@ -45,5 +45,6 @@
         .next_btn
           = f.submit :"次へ進む", class: "next_submit"
         %p.number_explanation ※電話番号は本人確認や不正利用防止のために利用します。他のユーザーに公開されることはありません。
+        .destroy-wall
 .single-footer
-            = render 'signups/footer'
+  = render 'signups/footer'
