--- a/app/assets/stylesheets/variables/mixins.scss
+++ b/app/assets/stylesheets/variables/mixins.scss
@@ -3,3 +3,34 @@
   font-size: 14px;
   text-shadow: 1px 2px 3px #333;
 }
+
+@mixin inpoint {
+  background-color: #ccc;
+  height: 12px;
+  width: 12px;
+  border-radius: 50%;
+  display: block;
+  margin: 8px auto;
+}
+@mixin after {
+  position: absolute;
+  bottom: 13px;
+  z-index: -1;
+  display: block;
+  content: '';
+  width: 100%;
+  height: 2px;
+  background: #ccc;
+  left: 50%;
+}
+@mixin before {
+  position: absolute;
+  bottom: 13px;
+  z-index: -1;
+  display: block;
+  content: '';
+  width: 100%;
+  height: 2px;
+  background: #ccc;
+  right: 50%;
+}
