--- a/app/views/signups/step1.html.haml
+++ b/app/views/signups/step1.html.haml
@@ -7,19 +7,19 @@
         会員情報
         %br
         %span.point1
-      %li.step-bar__block  
+      %li.step-bar__block
         電話番号認証
         %br
         %span.point2
-      %li.step-bar__block  
+      %li.step-bar__block
         お届け先住所入力
         %br
         %span.point3
-      %li.step-bar__block 
+      %li.step-bar__block
         支払い方法
         %br
         %span.point4
-      %li.step-bar__block 
+      %li.step-bar__block
         完了
         %br
         %span.point5
@@ -40,7 +40,10 @@
               = render 'shard/signups_errors', errors: @user.errors.full_messages_for(:nickname)
           - else
             .field-input
-              = f.text_field :nickname, autofocus: true, class: 'user_nickname', id: 'nickname', placeholder: '例）フリマ123'
+              - if @user.nickname
+                = f.text_field :nickname, autofocus: true, value: @user.nickname, class: 'user_nickname', id: 'nickname'
+              - else
+                = f.text_field :nickname, autofocus: true, class: 'user_nickname', id: 'nickname', placeholder: '例）フリマ123'
         .field
           .field-label
             = f.label :"メールアドレス", class: 'label_mail'
@@ -51,23 +54,28 @@
               = render 'shard/signups_errors', errors: @user.errors.full_messages_for(:email)
           - else
             .field-input
-              = f.email_field :email, class: 'user_email', id: 'email', placeholder: 'PC・携帯どちらでも可'
-        .field
-          = f.label :"パスワード", class: 'label_password'
-          %span.min #{required}
-          - if @user.errors.messages[:password].any?
-            = f.password_field :password_confirmation, class: 'user_password_error', id: 'password', placeholder: '７文字以上'
-            = render 'shard/signups_errors', errors: @user.errors.full_messages_for(:password)
-          - else
-            = f.password_field :password_confirmation, class: 'user_password', id: 'password', placeholder: '７文字以上'
-          .field_checkbox
-            = f.check_box :password, checked: false, class: "checkbox"
-            = f.label :"パスワードを表示する", class: 'check_password'
-          .user_confirm
-            %h4.confirm_title
-              本人確認
-            %p.confirm_message
-              安心・安全にご利用いただくために、お客さまの本人情報の登録にご協力ください。他のお客さまに公開されることはありません。
+              - if @user.email
+                = f.text_field :email, autofocus: true, value: @user.email, class: 'user_email', id: 'email'
+              - else
+                = f.email_field :email, class: 'user_email', id: 'email', placeholder: 'PC・携帯どちらでも可'
+        -# sns認証を利用して登録するユーザはpasswordを入力しない
+        - unless @user.password
+          .field
+            = f.label :"パスワード", class: 'label_password'
+            %span.min #{required}
+            - if @user.errors.messages[:password].any?
+              = f.password_field :password_confirmation, class: 'user_password_error', id: 'password', placeholder: '７文字以上'
+              = render 'shard/signups_errors', errors: @user.errors.full_messages_for(:password)
+            - else
+              = f.password_field :password_confirmation, class: 'user_password', id: 'password', placeholder: '７文字以上'
+            .field_checkbox
+              = f.check_box :password, checked: false, class: "checkbox"
+              = f.label :"パスワードを表示する", class: 'check_password'
+            .user_confirm
+              %h4.confirm_title
+                本人確認
+              %p.confirm_message
+                安心・安全にご利用いただくために、お客さまの本人情報の登録にご協力ください。他のお客さまに公開されることはありません。
         .field
           .field-label
             = f.label :"お名前(全角)", class: 'label_name'
